<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MovieDetailActivity">

    <ImageView
        android:id="@+id/movie_backdrop_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/movie_detail_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/movie_backdrop_image"
        tools:text="Inception" />

    <TextView
        android:id="@+id/movie_detail_director_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/movie_detail_director_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/open_review" />

    <TextView
        android:id="@+id/movie_detail_director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        tools:text="Christopher Nolan"
        app:layout_constraintBottom_toBottomOf="@+id/movie_detail_director_label"
        app:layout_constraintStart_toEndOf="@+id/movie_detail_director_label"
        app:layout_constraintTop_toTopOf="@+id/movie_detail_director_label"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/movie_detail_actors_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/movie_detail_actors_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/movie_detail_director_label"
        app:layout_constraintTop_toBottomOf="@+id/movie_detail_director_label" />

    <TextView
        android:id="@+id/movie_detail_actors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/movie_detail_review_count"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/movie_detail_director"
        app:layout_constraintTop_toTopOf="@+id/movie_detail_actors_label"
        tools:text="Leonardo DiCaprio, Ellen Page" />

    <TextView
        android:id="@+id/movie_detail_genre_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/movie_detail_genre_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/movie_detail_actors_label"
        app:layout_constraintTop_toBottomOf="@+id/movie_detail_actors" />

    <TextView
        android:id="@+id/movie_detail_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/movie_detail_genre_label"
        app:layout_constraintStart_toStartOf="@+id/movie_detail_actors"
        app:layout_constraintTop_toTopOf="@+id/movie_detail_genre_label"
        tools:text="Action" />

    <RatingBar
        android:id="@+id/movie_detail_rating_bar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="0"
        android:numStars="5"
        android:paddingTop="2dp"
        android:stepSize="0.5"
        app:layout_constraintBottom_toBottomOf="@+id/movie_detail_release"
        app:layout_constraintStart_toEndOf="@+id/movie_detail_release"
        app:layout_constraintTop_toTopOf="@+id/movie_detail_release" />

    <TextView
        android:id="@+id/movie_detail_rating_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/movie_detail_rating_bar"
        app:layout_constraintStart_toEndOf="@+id/movie_detail_rating_bar"
        app:layout_constraintTop_toTopOf="@+id/movie_detail_rating_bar"
        tools:text="4.5" />

        <TextView
            android:id="@+id/movie_detail_review_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/movie_detail_rating_value"
            app:layout_constraintStart_toEndOf="@+id/movie_detail_rating_value"
            app:layout_constraintTop_toTopOf="@+id/movie_detail_rating_value"
            tools:text="0" />

    <TextView
        android:id="@+id/movie_detail_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/movie_detail_header"
        app:layout_constraintTop_toBottomOf="@+id/movie_detail_header"
        tools:text="2010" />

    <TextView
        android:id="@+id/movie_detail_plot_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/movie_detail_plot_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/movie_detail_genre_label"
        app:layout_constraintTop_toBottomOf="@+id/movie_detail_genre" />

    <TextView
        android:id="@+id/movie_detail_plot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/movie_detail_review_count"
        app:layout_constraintStart_toStartOf="@+id/movie_detail_plot_label"
        app:layout_constraintTop_toBottomOf="@+id/movie_detail_plot_label"
        tools:text="Great Movie!" />

    <Button
        android:id="@+id/open_review"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/open_review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_detail_rating_bar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/movie_backdrop_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_backdrop_image">

        <ImageView
            android:id="@+id/movie_detailposter_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>